<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical"
    tools:context=".register.presentation.ui.FrgGender">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:id="@+id/iSearch"
        layout="@layout/base_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/titulos"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/text_gender"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:checkable="true"
            app:cardCornerRadius="8dp"
            app:checkedIcon="@drawable/ic_check"
            app:strokeColor="@drawable/stroke_gender"
            app:strokeWidth="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:padding="8sp"
                    android:src="@drawable/ic_male" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titulos"
                    android:padding="10sp"
                    android:text="@string/text_male"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/fontregular"
                    android:padding="4sp"
                    android:text="@string/text_ask_male"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:checkable="true"
            app:cardCornerRadius="8dp"
            app:checkedIcon="@drawable/ic_check"
            app:strokeColor="@drawable/stroke_gender"
            app:strokeWidth="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:padding="8sp"
                    android:src="@drawable/ic_female" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titulos"
                    android:padding="10sp"
                    android:text="@string/text_female"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/fontregular"
                    android:padding="4sp"
                    android:text="@string/text_ask_female"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>